--- a/.travis.yml
+++ b/.travis.yml
@@ -12,35 +12,51 @@ notifications:
 matrix:
   include:
     - os: linux
-      compiler: gcc
+      compiler: g++
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test']
-          packages: ['g++-7', 'g++-7-multilib', 'g++-multilib', 'valgrind', 'expect']
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+            - g++-7-multilib
+            - g++-multilib
+            - expect
       env:
         - COMPILER=g++-7
         - COMP=gcc
 
     - os: linux
-      compiler: clang
+      compiler: clang++
       addons:
         apt:
-          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-trusty-5.0']
-          packages: ['clang-5.0', 'llvm-5.0-dev', 'g++-multilib', 'valgrind', 'expect']
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-trusty-5.0
+          packages:
+            - clang-5.0
+            - llvm-5.0-dev
+            - g++-multilib
+            - expect
       env:
         - COMPILER=clang++-5.0
         - COMP=clang
         - LDFLAGS=-fuse-ld=gold
 
     - os: osx
-      compiler: clang
+      compiler: clang++
       env:
-        - COMPILER=clang++ V='Apple LLVM 6.0' # Apple LLVM version 6.0 (clang-600.0.54) (based on LLVM 3.5svn)
+        - COMPILER=clang++ V='Apple LLVM 6.0'  # Apple LLVM version 6.0 (clang-600.0.54) (based on LLVM 3.5svn)
         - COMP=clang
 
 
 before_script:
-- cd src; mkdir build; cd build
+- cd src
+- mkdir build
+- cd build
+- cmake --version
+- cmake ..
 
 script:
-- cmake .. && make && ./tests/unittest 
+- make
+- ./tests/unittest
