--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ notifications:
 matrix:
   include:
     - os: linux
-      compiler: g++
       addons:
         apt:
           sources:
@@ -22,18 +21,18 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
-    - os: linux
-      compiler: clang++
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-5.0
-          packages:
-            - clang-5.0
-            - llvm-5.0-dev
-      env:
-        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+#    - os: linux
+#      compiler: clang++
+#      addons:
+#        apt:
+#          sources:
+#            - ubuntu-toolchain-r-test
+#            - llvm-toolchain-trusty-5.0
+#          packages:
+#            - clang-5.0
+#            - llvm-5.0-dev
+#      env:
+#        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
     - os: osx
       compiler: clang++
