--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -6,4 +6,4 @@ list(REMOVE_ITEM ENGINE_LIB_SRC "testudo.cpp")
 add_library(testudo_lib ${ENGINE_LIB_SRC})
 
 add_executable(testudo "testudo.cpp")
-target_link_libraries(testudo testudo_lib)
+target_link_libraries(testudo testudo_lib docopt)
